[package]
name = "rust-beanstalkd"
version = "0.2.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[lib]
name = "rust_beanstalkd"
path = "src/lib.rs"

[[bin]]
name = "rust-beanstalkd"
path = "src/main.rs"

[dependencies]
futures = "0.1.11"
bytes = "0.4"
tokio-core = "0.1.6"
tokio-io = "0.1.0"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-timer = "*"
combine = "2.3.1"
yaml-rust = "0.3.5"
clap = "~2.19.0"
log = "0.3"
env_logger = "0.3"
