[package]
name = "rust-beanstalkd"
version = "0.2.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[lib]
name = "rust_beanstalkd"
path = "src/lib.rs"

[[bin]]
name = "rust-beanstalkd"
path = "src/main.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
combine = "2.3.1"
yaml-rust = "0.3.5"
clap = "~2.19.0"
log = "0.3"
env_logger = "0.3"
